@@ -205,3 +205,7 @@
 	* Modified 'COPYING.rtf' to be compatible with the NSIS dialog layout.
 2017-02-24 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.0.
+2017-02-28 Fred Gleason <fredg@paravelsystems.com>
+	* Extended 'StreamPlayer in 'src/common/streamplayer_alsa.cpp' to
+	support playing mono files on hardware without direct support for
+	mono.
